# ICE-BA

./: CMakeLists.txt.user.3e60363
App/: CMakeLists.txt  EuRoC_test.cpp  FPV_test.cpp
Backend/BundleAdjustment/: GlobalBundleAdjustor.cpp  GlobalBundleAdjustor.h  LocalBundleAdjustor.cpp  LocalBundleAdjustor.h
Backend/IBA/: IBA.cpp  IBA.h  Parameter.cpp  Parameter.h
Backend/Map/: LocalMap.h
Frontend/: CMakeLists.txt
batch_eval/: Run_EuRoC_Stereo.py  Run_EuRoC_Stereo.py.orig  Run_FPV_Stereo.py
config/: config_of_stereo_v2.txt
scripts/: Run_EuRoC_Stereo.py  Run_TUM_VI_Stereo.py  run_ice_ba_stereo.sh
